--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-  "node": ">=16.0.0",
-  "homepage": "https://Krugo-D.github.io/buildspace-dao-starter"
+  "node": ">=16.0.0"
   },
   "dependencies": {
     "@3rdweb/hooks": "^1.6.0",
@@ -16,10 +15,8 @@
     "react-scripts": "^4.0.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && surge /home/Krugo-D/Code/buildspace-dao-starter/build loldao.surge.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
